Cambios para el Dockerfile y vsftdp respecto a la seguridad

--- a/configs/vsftpd.conf
+++ b/configs/vsftpd.conf
@@ -2,6 +2,7 @@
 listen=YES
 listen_ipv6=NO
 
+
 # Acceso anónimo deshabilitado
 anonymous_enable=NO
 
@@ -44,6 +45,7 @@ userlist_deny=NO
 
 # Configuración de seguridad
 seccomp_sandbox=NO
+secure_chroot_dir=/var/run/vsftpd/empty
 
 # Configuración SSL (opcional, descomentado para FTPS)
 #ssl_enable=YES
