--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,22 @@ services:
       # Variables para configuración de red
       - HOSTNAME=webserver-ftp
       - DOMAIN=local
+      - DNS_PRIMARY=192.168.1.2
+      - DNS_SECONDARY=8.8.8.8
+      - DNS_SERVER_IP=192.168.1.2
+      - DHCP_SERVER_IP=192.168.1.2
+      - SERVER_IP=192.168.1.3
     # Configuración de DNS personalizada
     dns:
-      - 8.8.8.8          # DNS primario (cambiar por tu DNS server)
-      - 8.8.4.4          # DNS secundario (cambiar por tu DNS server)
+      - 192.168.1.2         # DNS primario - servidor DHCP/DNS
+      - 8.8.8.8             # DNS secundario (fallback)
     # Opciones adicionales de DNS
     dns_search:
-      - local            # Dominio de búsqueda (cambiar según tu red)
+      - local               # Dominio de búsqueda
     # Configuración de red avanzada
     extra_hosts:
-      - "dns-server:192.168.1.100"    # IP de tu servidor DNS (cambiar)
-      - "dhcp-server:192.168.1.101"   # IP de tu servidor DHCP (cambiar)
+      - "dns-server:192.168.1.2"    # IP de tu servidor DNS (cambiar)
+      - "dhcp-server:192.168.1.2"   # IP de tu servidor DHCP (cambiar)
     restart: unless-stopped
     networks:
       webnet:
