Cambios en servidores para cargar y descargar archivos

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -18,6 +18,14 @@ stderr_logfile=/var/log/supervisor/vsftpd.log
 autorestart=true
 priority=20
 
+[program:upload-server]
+command=/usr/bin/python3 /app/upload_server.py
+directory=/app
+stdout_logfile=/var/log/supervisor/upload_server.log
+stderr_logfile=/var/log/supervisor/upload_server.log
+autorestart=true
+priority=30
+
 [unix_http_server]
 file=/var/run/supervisor.sock
 chmod=0700
