--- a/network-config.env
+++ b/network-config.env
@@ -19,6 +19,7 @@ DHCP_SERVER_IP=192.168.1.2     # IP del servidor DHCP (misma IP)
 # Información de red configurada
 SERVER_IP_CURRENT=10.4.72.103  # IP actual del servidor Ubuntu
 SERVER_IP_TARGET=192.168.1.3   # IP objetivo después de DHCP
+SERVER_IP=192.168.1.3           # IP del servidor de archivos
 NETWORK_SUBNET=192.168.1.0/24  # Subred objetivo
 
 # Configuración de red Docker
